@@ -9,6 +9,7 @@ import com.metaverse.workflow.model.FinancialTarget;
 import com.metaverse.workflow.model.PhysicalTarget;
 import com.metaverse.workflow.model.outcomes.ProgramOutcomeTable;
 import com.metaverse.workflow.programoutcome.repository.ProgramOutcomeTableRepository;
+import com.metaverse.workflow.programoutcometargets.dto.ActivityGroupDTO;
 import com.metaverse.workflow.programoutcometargets.dto.FinancialTargetOverAllDTO;
 import com.metaverse.workflow.programoutcometargets.dto.FinancialTargetSummaryDTO;
 import com.metaverse.workflow.programoutcometargets.repository.FinancialRepository;
@@ -191,14 +192,12 @@ public class TargetServiceAdepter implements TargetService {
 
     public FinancialTargetOverAllDTO getFinancialTargetSummary(Long agencyId) {
         FinancialTargetOverAllDTO dto = new FinancialTargetOverAllDTO();
-
-        // Convert rows to DTOs
         List<FinancialTargetSummaryDTO> collect = financialRepository.getFinancialTargetSummary(agencyId)
                 .stream()
                 .map(row -> new FinancialTargetSummaryDTO(
                         ((Number) row[0]).longValue(),
-                        (String) row[1],   // maybe year?
-                        (String) row[2],   // activityName
+                        (String) row[1],
+                        (String) row[2],
                         (String) row[3],
                         row[4] != null ? ((Number) row[4]).doubleValue() : null,
                         row[5] != null ? ((Number) row[5]).doubleValue() : null,
@@ -206,24 +205,35 @@ public class TargetServiceAdepter implements TargetService {
                         row[7] != null ? ((Number) row[7]).doubleValue() : null,
                         row[8] != null ? ((Number) row[8]).doubleValue() : null
                 ))
-                .toList();
+                .collect(Collectors.toList());
 
-        // Group by activityName
-        Map<String, List<FinancialTargetSummaryDTO>> groupedByActivity =
-                collect.stream().collect(Collectors.groupingBy(FinancialTargetSummaryDTO::getActivityName));
+        Map<String, ActivityGroupDTO> grouped = records.stream()
+                .collect(Collectors.groupingBy(
+                        FinancialTargetSummaryDTO::getActivityName,
+                        Collectors.collectingAndThen(Collectors.toList(), list -> {
+                            List<String> headers = list.stream()
+                                    .map(FinancialTargetSummaryDTO::getFinancialYear)
+                                    .distinct()
+                                    .collect(Collectors.toList());
+                            return new ActivityGroupDTO(headers, list);
+                        })
+                ));
 
-        // Set grouped result inside DTO
-        dto.setGroupedFinancialTargets(groupedByActivity);
-
-        // Overall Target (sum of yearlyTarget)
-        Double overall = collect.stream()
-                .map(FinancialTargetSummaryDTO::getYearlyTarget)
-                .filter(Objects::nonNull)
-                .reduce(0.0, Double::sum);
-
-        dto.setOverallTarget(String.valueOf(overall));
-
-        return dto;
+        Double total = records.stream()
+                .mapToDouble(f -> f.getTotal() != null ? f.getTotal() : 0.0)
+                .sum();
+        return FinancialTargetOverAllDTO.builder()
+                .overallTarget(total.toString())
+                .groupedFinancialTargets(grouped)
+                .build();
     }
 
+    private String normalizeFinancialYear(String raw) {
+        if (raw == null) return null;
+        raw = raw.trim();
+        if (raw.matches("\\d{4}-\\d{4}")) {
+            return raw.substring(0, 5) + raw.substring(7);
+        }
+        return raw;
+    }
 }
